--- a/01_06_feladatok.ipynb
+++ b/01_06_feladatok.ipynb
@@ -22,16 +22,14 @@
     },
     "colab": {
       "name": "feladat01.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BrjbAqF7dFwX",
-        "colab_type": "text"
+        "id": "BrjbAqF7dFwX"
       },
       "source": [
         "# Feladatok\n",
@@ -44,8 +42,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4u3wvRgsdFwa",
-        "colab_type": "text"
+        "id": "4u3wvRgsdFwa"
       },
       "source": [
         "## 1. Feladat\n",
@@ -57,9 +54,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KiIy4GbidFwb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "KiIy4GbidFwb"
       },
       "source": [
         "sms=['Szentírás ', 'bölcs ', 'a ', 'már ', 'szükséges ', 'mondhat ', 'biztosak ', 'a ', \n",
@@ -68,14 +63,13 @@
         "     'ami ', 'hogy ', 'melyekben ', 'kísérletek ', 'megtalálják ', 'által.', 'két ', 'fizikai ',\n",
         "     'egymásnak, ', 'egyezik ', 'és ', 'értelmezőinek ', 'értelmezését, ']"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kRAM2StCdFwf",
-        "colab_type": "text"
+        "id": "kRAM2StCdFwf"
       },
       "source": [
         "Később a telefonszolgáltató megtalálta a hiba okát, és elküldte, hogy milyen sorrendben kaptuk meg az eredeti szöveg szavait:"
@@ -84,21 +78,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YfEx-oA7dFwg",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YfEx-oA7dFwg"
       },
       "source": [
         "sorrend=[8,9,15,26,33,4,27,11,12,0,5,32,29,21,24,22,28,7,30,16,17,2,3,19,13,25,34,14,35,1,23,6,20,31,10,18]"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sA6gpmXJdFwj",
-        "colab_type": "text"
+        "id": "sA6gpmXJdFwj"
       },
       "source": [
         "Azaz az általunk megkapott első szó az eredeti szövegben a 8-as indexet viselte, azaz a 9. volt.\n",
@@ -107,10 +98,40 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "sorted = [x for _, x in sorted(zip(sorrend, sms))]\n",
+        "' '.join(sorted)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "KAfmx7XAOE8p",
+        "outputId": "61da700f-bb04-42bb-b102-a6f26193521f"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Mivel  két  igazság  sose  mondhat  ellent  egymásnak,  a  Szentírás  bölcs  értelmezőinek  a  feladata,  hogy  megtalálják  a  szöveg  azon  értelmezését,  ami  egyezik  azokkal  a  fizikai  következtetésekkel,  melyekben  már  biztosak  vagyunk  érzéki  tapasztalataink  és  a  szükséges  kísérletek  által.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "trwhokPldFwk",
-        "colab_type": "text"
+        "id": "trwhokPldFwk"
       },
       "source": [
         "## 2. Feladat\n",
@@ -127,9 +148,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9tGUdBQndFwl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9tGUdBQndFwl"
       },
       "source": [
         "szotar={'a':'the',\n",
@@ -141,14 +160,13 @@
         "\n",
         "pelda_szoveg='a majom szereti a banánt minden kutya szereti a kolbászt'"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dK---IxJdFwo",
-        "colab_type": "text"
+        "id": "dK---IxJdFwo"
       },
       "source": [
         "## 3. feladat\n",
@@ -167,9 +185,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iHHzPu_jdFwp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "iHHzPu_jdFwp"
       },
       "source": [
         "def masodfoku(a,b,c):\n",
@@ -177,14 +193,13 @@
         "    \n",
         "    return x1,x2"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PxmZy_IRdFws",
-        "colab_type": "text"
+        "id": "PxmZy_IRdFws"
       },
       "source": [
         "## 4. Feladat\n",
@@ -204,9 +219,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gemtKC0SdFws",
-        "colab_type": "code",
-        "colab": {}
+        "id": "gemtKC0SdFws"
       },
       "source": [
         "def mertani(x0,q,N):\n",
@@ -215,14 +228,13 @@
         "    # ide jön a varázslat..\n",
         "    #\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "76srIpUudFwv",
-        "colab_type": "text"
+        "id": "76srIpUudFwv"
       },
       "source": [
         "##  5. feladat\n",
@@ -243,9 +255,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yM95f8I0dFwv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yM95f8I0dFwv"
       },
       "source": [
         "szotar={'a':'the',\n",
@@ -257,14 +267,13 @@
         "\n",
         "angol_mondat='The monkey likes banana. Every dog likes sausage.'"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-qRGQ5HIdFwy",
-        "colab_type": "text"
+        "id": "-qRGQ5HIdFwy"
       },
       "source": [
         "##  6. feladat \n",
@@ -280,9 +289,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sJiHJMyLdFwy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "sJiHJMyLdFwy"
       },
       "source": [
         "def fuggveny(x,*args,**kwargs):\n",
@@ -292,14 +299,13 @@
         "    #\n",
         "    "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PuID9ktLdFw1",
-        "colab_type": "text"
+        "id": "PuID9ktLdFw1"
       },
       "source": [
         "## 7. feladat\n",
@@ -312,8 +318,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CAAfXZzzdFw2",
-        "colab_type": "text"
+        "id": "CAAfXZzzdFw2"
       },
       "source": [
         "##  8. Péksütemény \n",
@@ -326,14 +331,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YiU_180sdFw2",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YiU_180sdFw2"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
+      "source": [],
+      "execution_count": null,
       "outputs": []
     }
   ]
